--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.7+4
   hive_flutter: ^1.1.0
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
